# llm-test-bench

./: CHANGELOG.md  Cargo.toml  PUBLISHING_STEPS.md  README.md  package-lock.json  package.json
.claude-flow/metrics/: system-metrics.json
.github/workflows/: ci.yml  llm-benchmark.yml  npm-publish.yml  release.yml  security.yml
cli/: Cargo.toml
cli/src/commands/: analyze.rs  compare.rs  optimize.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/api/: server.rs
core/src/distributed/: coordinator.rs
core/src/monitoring/: dashboard.rs  prometheus.rs  websocket.rs
core/src/multimodal/: evaluation.rs
core/src/plugins/: manager.rs  runtime.rs
core/src/providers/: models.rs
datasets/: Cargo.toml
docs/: CLEANUP_SUMMARY.md  COHERENCE_PERPLEXITY_IMPLEMENTATION.md  DATASET_FILES_SUMMARY.txt  DELIVERABLES_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  ORCHESTRATION_IMPLEMENTATION.md  PHASE4_COMPLETE.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PROVIDERS.md  VISUALIZATION_CHECKLIST.md  VISUALIZATION_IMPLEMENTATION.md
npm/: .npmignore  LICENSE-APACHE  LICENSE-MIT  NPM_PUBLISHING_SUMMARY.md  PUBLISHING.md  README.md  package.json
npm/scripts/: install.js  test.js
