[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "datasets",
]

[workspace.lints.clippy]
all = "warn"
correctness = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLM Test Bench Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/globalbusinessadvisors/llm-test-bench"
homepage = "https://github.com/globalbusinessadvisors/llm-test-bench"
documentation = "https://docs.rs/llm-test-bench"
readme = "README.md"
keywords = ["llm", "benchmark", "testing", "ai", "gpt"]
categories = ["command-line-utilities", "development-tools::testing", "science"]
rust-version = "1.75.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "color", "suggestions"] }
clap_complete = "4.5"
inquire = "0.7"
dirs = "5.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
indicatif = "0.17"
colored = "2.1"

# CSV export
csv = "1.3"

# Template engine
regex = "1.10"

# Streaming utilities
futures-util = "0.3"
tokio-stream = "0.1"
eventsource-stream = "0.2"
chrono = "0.4"
futures = "0.3"
pin-project = "1.1"
reqwest-eventsource = "0.6"

# Testing
assert_cmd = "2.0"
predicates = "3.1"
trycmd = "0.15"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
