[package]
name = "llm-test-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "A production-grade CLI for testing and benchmarking LLM applications with support for GPT-5, Claude Opus 4, Gemini 2.5, and 65+ models"
readme = "../README.md"

[[bin]]
name = "llm-test-bench"
path = "src/main.rs"

[dependencies]
# Workspace crates
llm-test-bench-core = { version = "0.1.0", path = "../core" }
llm-test-bench-datasets = { version = "0.1.0", path = "../datasets" }

# CLI framework
clap = { workspace = true }
clap_complete = { workspace = true }

# Interactive prompts
inquire = { workspace = true }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
dirs = { workspace = true }
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Terminal UI
indicatif = { workspace = true }
colored = { workspace = true }

# Streaming
futures = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = "3.8"
